--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
+  background-color: #033159;
+  color: #ffff;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +12,16 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+@font-face {
+  font-family: 'ProggyCrossed Regular';
+  src: url('./fonts/ProggyCrossed Regular.ttf');
+}
+
+
+@font-face {
+  font-family: 'DinaRemasterII';
+  src: url('./fonts/DinaRemasterII.ttc');
 }
